--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 *{
-     background-color: #222;
-     color: #a8a3a3;
+     background-color: #000000;
+     color: #fff;
      margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,9 +18,32 @@
         background-position: center center;
         max-width: 100%;
         background-repeat: no-repeat;
-        height: 500px;
+        height: 600px;
+        color: #fff;
  }
     .posters{
         display: flex ;
         overflow: auto;
+        overflow-y: hidden;
+        overflow-x: scroll;
+    }
+    .posters::-webkit-scrollbar{
+        display: none;
+    }
+    .posters img{
+        margin: 0% 5%;
+        border-radius: 0.5%;
+    }
+    h1{
+    font-size: 1rem;
+    font-weight:700;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1% 0% 0% 1%;
+    }
+    h3{
+        text-align: center;
+        font-weight: 400;
+        font-size: 0.9rem;
+        padding: 1% 0%;
+        font-family: Arial, Helvetica, sans-serif;
     }
