--- a/netf.css
+++ b/netf.css
@@ -16,13 +16,41 @@ body{
     background-position:center center;
 }
 .box{
-    border-style:solid;
-    border-width: 0.2px;
-    width: 3px;
-    height: 3px;
+    border: 1px solid ;
+    padding: 2px 2px;
 }
-.bannercontent .bannertitle{
+.bannercontent .bannertitle img{
     object-fit: contain;
     max-width: 80%;
+}
+.bannercontent{
+    padding: 6%;
+}
+.bannercontent .bannertitle h1{
+    font-size: medium;
+    padding: 5px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.bannercontent .bannertitle h3{
+    color: #a3a3a3;
+    font-weight: 100;
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.bannercontent .bannertitle span{
+    padding: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+.bannercontent .bannertitle p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+
+}
+.logo img{
+    max-width: 100px;
+    max-height: 100px;
 
 }
