--- a/netf.css
+++ b/netf.css
@@ -7,6 +7,57 @@ body{
     background-color: rgb(2, 0, 0);
     color: rgb(239, 241, 241);
 }
+nav .logo img{
+    max-width: 14%;
+    object-fit: contain;
+    padding: 8px;
+}
+nav{
+    display: flex;
+    padding: 0px 20px;
+    justify-content: space-between;
+}
+nav .action{
+    display: flex;
+    margin: 10px 20px;
+}
+nav .action .JoinNow{
+    background-color: red;
+    padding: 10px 40px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin: 0px 10px;
+    text-align: center;
+    display: inline-block;
+    white-space: nowrap;
+}
+nav .action .JoinNow:hover{
+    background-color: #0bf22e;
+    transition: 0.5;
+}
+nav .action .SignIn{
+    background-color: black;
+    padding: 10px 40px;
+    border: 1px solid;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin: 0px 10px;
+    display: inline-block;
+    white-space: nowrap;
+}
+nav .action .SignIn:hover{
+    background-color: #0bf22e;
+    transition: 0.5;
+}
 .banner{
     background:linear-gradient(360deg,#181818 10%,hsla(0,0%,9%,.98) 20%,hsla(0,0%,9%,.97) 25%,hsla(0,0%,9%,.95) 35%,hsla(0,0%,9%,.94) 40%,hsla(0,0%,9%,.92) 45%,hsla(0,0%,9%,.9) 50%,hsla(0,0%,9%,.87) 55%,hsla(0,0%,9%,.82) 60%,hsla(0,0%,9%,.75) 65%,hsla(0,0%,9%,.63) 70%,hsla(0,0%,9%,.45) 75%,hsla(0,0%,9%,.27) 80%,hsla(0,0%,9%,.15) 85%,hsla(0,0%,9%,.08) 90%,hsla(0,0%,9%,.03) 95%,hsla(0,0%,9%,0)),url(https://occ-0-4857-2186.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABXXVzl-OAKKW8Nkzq8rSsNYZQaV4oqrNtlQ3oqfLHP_7rWlj2vdgfKYHF4pLBQX2lLX7yr3xEDWr8eLVXlKhHHejVoFyoAylbjn0.jpg);
     background-size: cover;
@@ -21,7 +72,7 @@ body{
 }
 .bannercontent .bannertitle img{
     object-fit: contain;
-    max-width: 80%;
+    max-width: 70%;
 }
 .bannercontent{
     padding: 6%;
@@ -47,10 +98,4 @@ body{
 .bannercontent .bannertitle p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
-
-}
-.logo img{
-    max-width: 100px;
-    max-height: 100px;
-
 }
